# feedback_report_generator

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/assignment/: admin.py  models.py  schemas.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/assignment/migrations/: 0001_initial.py
core/: __init__.py  celery.py  settings.py  urls.py
core/templates/: index.html
